tests/snapshots/examples__01b_quick_example --help.snap
---
source: tests/examples.rs
expression: help
---
MyApp 1.0
Kevin K. <kbknapp@gmail.com>
Does awesome things

USAGE:
    01b_quick_example [OPTIONS] [output] [SUBCOMMAND]

ARGS:
    <output>    Sets an optional output file

FLAGS:
    -h, --help       Prints help information
    -V, --version    Prints version information

OPTIONS:
    -c, --config <FILE>    Sets a custom config file
    -d <debug>...          Turn debugging information on

SUBCOMMANDS:
    help    Prints this message or the help of the given subcommand(s)
    test    does testing things

