tests/snapshots/examples__01c_quick_example --help.snap
---
source: tests/examples.rs
expression: help
---
myapp 1.0
Kevin K. <kbknapp@gmail.com>
Does awesome things

USAGE:
    01c_quick_example [OPTIONS] <INPUT> [SUBCOMMAND]

ARGS:
    <INPUT>    Sets the input file to use

FLAGS:
    -h, --help       Prints help information
    -V, --version    Prints version information

OPTIONS:
    -c, --config <CONFIG>    Sets a custom config file
    -d <debug>...            Sets the level of debugging information

SUBCOMMANDS:
    help    Prints this message or the help of the given subcommand(s)
    test    controls testing features

