tests/snapshots/examples__02_apps --help.snap
---
source: tests/examples.rs
expression: help
---
MyApp 1.0
Kevin K. <kbknapp@gmail.com>
Does awesome things

USAGE:
    02_apps

FLAGS:
    -h, --help       Prints help information
    -V, --version    Prints version information

