tests/snapshots/examples__04_using_matches --help.snap
---
source: tests/examples.rs
expression: help
---
MyApp 1.0
Kevin K. <kbknapp@gmail.com>
Parses an input file to do awesome things

USAGE:
    04_using_matches [FLAGS] [OPTIONS] <input>

ARGS:
    <input>    the input file to use

FLAGS:
    -d, --debug      turn on debugging information
    -h, --help       Prints help information
    -V, --version    Prints version information

OPTIONS:
    -c, --config <config>    sets the config file to use

