tests/snapshots/examples__08_subcommands --help.snap
---
source: tests/examples.rs
expression: help
---
MyApp 

USAGE:
    08_subcommands [SUBCOMMAND]

FLAGS:
    -h, --help       Prints help information
    -V, --version    Prints version information

SUBCOMMANDS:
    add     Adds files to myapp
    help    Prints this message or the help of the given subcommand(s)

