tests/snapshots/examples__09_auto_version --help.snap
---
source: tests/examples.rs
expression: help
---
myapp 3.0.0-beta.1
does awesome things

USAGE:
    09_auto_version

FLAGS:
    -h, --help       Prints help information
    -V, --version    Prints version information

